# re3q3

./: CMakeLists.txt  README.md  re3q3_mex.cc  test_p4pf.cpp  test_re3q3.cc  test_re3q3.cpp
examples/: p4pf.cpp  p4pf.h
re3q3/: re3q3.cc  re3q3.h  sturm8.cc  sturm8.h
